--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,20 @@ body{
     min-height: 100vh;
 }
 .foto-perfil{
-    width: 60px;
-    height: 60px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     margin-bottom: 10px;
     border: 3px solid black;
+} 
+
+.container{
+    max-width: 600px;
+    padding: 20px;
+    text-align: center;
+}
+.perfil h1{
+font-size: 1.5rem;
+margin-bottom: 5px;
+
 }
